--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,28 +1,41 @@
-.App {
+.main-container {
+  padding: 1rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 920px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.title {
+  font-size: 42px;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.activity {
+  padding: 2rem 2rem 3rem 2rem;
+  margin: 1rem 0;
+  width: 90%;
+  max-width: 90%;
+  box-sizing: border-box;
+  min-height: 1px;
+  background: #fff;
+  border-radius: 2px;
+  margin: 1rem;
+  position: relative;
+
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
-.App-title {
-  font-size: 1.5em;
+.activity-title {
+  font-size: 21px;
+  font-weight: 700;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.activity-description {
+  font-size: 12px;
+  font-weight: 400;
+  padding-bottom: 2rem;
 }
