--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,13 @@
+html {
+  background-color: #e2e1e0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+#root {
+  width: 100%;
 }
