--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,5 @@
 .main-container {
   padding: 0.5rem;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -13,6 +12,14 @@
   font-size: 32px;
   font-weight: 600;
   padding: 1rem 0;
+  color: #2b9a2b;
+}
+
+.logo {
+  height: 64px;
+  position: relative;
+  margin-right: -17px;
+  top: 6px;
 }
 
 .info {
@@ -26,7 +33,7 @@
   max-width: 640px;
   box-sizing: border-box;
   min-height: 1px;
-  background: #e7f1e4;
+  background: #edf3eb;
   border-radius: 2px;
   margin: 1rem;
   position: relative;
@@ -34,25 +41,44 @@
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 
+.camera-icon {
+  height: 24px;
+  position: absolute;
+  top: 12px;
+  left: 18px;
+  margin-right: 10px;
+}
+
 .activity-title {
-  font-size: 24px;
+  position: absolute;
+  top: 13px;
+  left: 48px;
+  font-size: 20px;
   font-weight: 700;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.2rem;
+  color: #d80027;
 }
 
 .activity-description {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
+  padding-top: 24px;
   padding-bottom: 1rem;
 }
 
 .activity-new {
   position: relative;
   top: -3px;
-  background-color: #ec1450;
+  background-color: #315bb9;
   color: white;
   border-radius: 3px;
   padding: 3px 10px;
   margin: 0 10px;
   font-size: 12px;
+}
+
+.footer {
+  text-align: center;
+  font-size: 12px;
+  margin: 20px 30px;
 }
